#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(xmltoc, 0.1)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(xmltoc, 0.1)
AC_CONFIG_SRCDIR(src/xmltoc.c)
AC_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(xml2, xmlInitParser, echo -n, [
	AC_MSG_ERROR([libxml2 is missing: xmltoc depends on it])
])

AC_CHECK_LIB(expat, XML_ParserCreate, HAVE_EXPAT=yes, [
	AC_MSG_WARN([Expat XML processor not found - cannot enable 'cwmpdmtoc'])
	HAVE_EXPAT=no
])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h stdlib.h string.h unistd.h libxml2/libxml/parser.h libxml2/libxml/tree.h libxml2/libxml/xpath.h libxml2/libxml/xpathInternals.h], , [
	AC_MSG_ERROR([Important header file not found])
])
AC_CHECK_HEADERS([expat.h], , [
	AC_MSG_WARN([Expat header files not found])
	HAVE_EXPAT=no
])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset strchr strdup strndup strrchr])

# ./configure parameters (site configuration)

AC_ARG_ENABLE(cwmpdmtoc,
	AC_HELP_STRING([--enable-cwmpdmtoc], [Compile obsoleted Expat-based 'cwmpdmtoc' (default is no)]),
[case "${enableval}" in
  yes) cwmpdmtoc=true ;;
  no)  cwmpdmtoc=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-cwmpdmtoc) ;;
esac],[cwmpdmtoc=false])
AM_CONDITIONAL(CWMPDMTOC, test x$cwmpdmtoc = xtrue)

if test x$cwmpdmtoc = xtrue -a x$HAVE_EXPAT = xno; then
	AC_MSG_ERROR([Expat is necessary to compile 'cwmpdmtoc'])
fi

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT
